--- a/html/createTask.html
+++ b/html/createTask.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Submit a Task</title>
-    <link rel="stylesheet" href="/html/createTask.css">
+    <link rel="stylesheet" href="/styles/createTask.css">
 </head>
 <body>
     <header>
