verifying main is up to date

--- a/html/createTask.html
+++ b/html/createTask.html
@@ -43,7 +43,7 @@
             <h2>Lets Create a Task!</h2>
 
             <label for="userSelect">Select a User</label>
-            <select name="userSelect" id="UserSelect">
+            <select name="userSelect" id="userSelect">
                 <option value="blank">select a user</option>
             </select>
 
@@ -70,5 +70,6 @@
         </form>
     </main>
     
+    <script src="/scripts/createTask.js"></script>
 </body>
 </html>
